# timeseries

./: .gitignore  README.md  Untitled.ipynb  package-lock.json  pyproject.toml
Chelini/GNN/: config_gnn.yaml  model.py
bash_examples/: inference.py  train.py
bash_examples/load_data/: load_data_edison.py  load_data_incube.py  load_data_public.py
metrics/: ts_correlation.py
models/single_timeseries/: BollingerBands.py  KalmanFilter.py  MovingAverage.py  ensamble.py
models/tft/: embedding_nn.py
notebooks/: 1 -monash_timeseries.ipynb  testing_chelini.ipynb  train.py
services/: app.py  main.py
services/routers/: __init__.py  compute_metrics.py  get_indicators.py  load_data.py  models.py  ticker_returns.py  utils.py
services/routers/models/: data.py  indicators.py  main_config.py  tickerdata.py
timeseries/dsipts/models/: TFT.py  TFT2.py
timeseries/metrics/: RSI.py  returns.py  ts_correlation.py
timeseries/models/: register.py
timeseries/models/single_timeseries/: ARIMA.py  BollingerBands.py  GARCH.py  RegimeDetector.py  ensamble.py
timeseries/models/tft/: embedding_nn.py
ts_storage/: aapl.json  analysis.json  btc-usd.json  nasdaq.json  s&p500.json  tesla.json
ts_storage/data/: AAPL.json  ABBV.json  AMD.json  AMZN.json  AVGO.json  BAC.json  COST.json  CSCO.json  CVX.json  GE.json  GOOG.json  GOOGL.json  HD.json  JNJ.json  JPM.json  LLY.json  MA.json  META.json  MSFT.json  MU.json  NFLX.json  NVDA.json  ORCL.json  PG.json  PLTR.json  TSLA.json  V.json  WMT.json  XOM.json
ts_storage/titles/: gold.json
(+1 files in other folders)
