[project]
name = "timeseries"
version = "0.0.1"
authors = [
    { name = "Andrea Chelini", email = "a.chelini99@gmail.com" }
]
description = "Python library for time series forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
    "beautifulsoup4==4.12.0",
    "html5lib",
    "ipdb==0.13.13",
    "html-table-parser-python3==0.3.1",
    "omegaconf",
    "plotly",
    "kaleido",
    "sphinx",
    "sphinx_rtd_theme",
    "hydra-core",
    "einops",
    "torch>=2.9.1",
    "uvicorn[standard]>=0.40.0",
    "pandas-stubs==2.3.3.251219",
    "tqdm>=4.67.1",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "yfinance>=1.0",
    "torchmetrics>=1.8.2",
    "matplotlib>=3.10.8",
]
